Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.4.7.9:

* eapi2 is now supported.

* DepSet has grown a temp option named allow_src_uri_file_names; this
  is to support eapi 2's -> SRC_URI extension.  This functionality
  will under go refactoring in the coming days- as such the api addition
  isn't considered stable.

* we now match the forced phase ordering portage induced via breaking
  eapi compatibilty for eapi0/1.

* tightened up allowed atom syntax; repository dep is available only when
  eapi is unspecified (no longer available in eapi2 in other words).
  atom USE dep parsing now requires it to follow slotting- this is done to
  match the other EAPI2 standard.

  Beyond that, better error msgs and tighter validation.


pkgcore 0.4.7.8: August 28, 2008

* pkgcore now properly preserves ownership of symlinks on merging.
  ensure_perms plugins now need to handle symlinks (lchown at the least).

* free resolver caches after resolution is finished; lower the memory
  baseline for pmerge.

* fix up interface definitions for >snakeoil-0.2 dependant_methods changes.
  Via these cleanups and >snakeoil-0.2, memory usage is massively decreased
  for pmerge invocations.

* swallow EPIPE in pquery when stdout is closed early.


pkgcore 0.4.7.7: August 11, 2008

* Disable fakeroot tests due to odd behaviour, and the fact it's currently
  unused.

* Fix installation issue for manpages for python2.4; os.path.join behaviour
  differs between 2.4 and 2.5.

* Kill off large memory leak that reared it's head per pkg merge; still is
  a bit of a leak remaining, but nothing near as bad as before.


pkgcore 0.4.7.6: August 10, 2008

* fix sandbox complaint when PORT_LOGDIR is enabled- sandbox requires abspath
  for any SANDBOX_WRITE exemptions, if PORT_LOGDIR path includes symlinks,
  force a `readlink -f` of the sandbox exemption.
  http://forums.gentoo.org/viewtopic-p-5176414.html
