@@ -36,4 +36,4 @@ WORLD_FILE           = '/var/lib/portage/world'
 LIBFAKEROOT_PATH     = "/usr/lib/libfakeroot.so"
 FAKED_PATH           = "/usr/bin/faked"
 
-VERSION              = '0.4.7.9'
+VERSION              = '0.4.7.10'
